force-app/main/default/objects/FundingAward/fields/Agreement_Status__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Status__c</fullName>
    <label>Grant Agreement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agreement Sent</fullName>
            </value>
            <value>
                <fullName>Agreement Signed</fullName>
            </value>
            <value>
                <fullName>Agreement Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>