force-app/main/default/objects/FundingAward/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <formula>EndDate + 7</formula>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>