force-app/main/default/objects/FundingAward/fields/Embargo_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Embargo_End_Date__c</fullName>
    <label>Embargo End Date</label>
    <type>Date</type>
</CustomField>