force-app/main/default/objects/FundingAward/fields/Embargo_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Embargo_Start_Date__c</fullName>
    <label>Embargo Start Date</label>
    <type>Date</type>
</CustomField>