force-app/main/default/objects/FundingAward/fields/Funding_Opp_Name__c.field-meta.xml
<CustomField>
    <fullName>Funding_Opp_Name__c</fullName>
    <formula>FundingOpportunity.Name</formula>
    <label>Funding Opp Name</label>
    <type>Text</type>
</CustomField>