force-app/main/default/objects/FundingAward/fields/NDA_Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>NDA_Acknowledged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NDA Acknowledged</label>
    <type>Checkbox</type>
</CustomField>