force-app/main/default/objects/FundingAward/fields/Public_Announcement_Date__c.field-meta.xml
<CustomField>
    <fullName>Public_Announcement_Date__c</fullName>
    <label>Public Announcement Date</label>
    <type>Date</type>
</CustomField>