force-app/main/default/objects/FundingAward/fields/Required_Documents_Pending__c.field-meta.xml
<CustomField>
    <fullName>Required_Documents_Pending__c</fullName>
    <description>This field denotes the count of required documents still pending</description>
    <label>Required Documents Pending</label>
    <summaryFilterItems>
        <field>FundingAwardRequirement.ApprovalStatus</field>
        <operation>notEqual</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>FundingAwardRequirement.FundingAwardId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>