force-app/main/default/objects/FundingAward/fields/Spending_Period_Ended_Yesterday__c.field-meta.xml
<CustomField>
    <fullName>Spending_Period_Ended_Yesterday__c</fullName>
    <formula>DATEVALUE(EndDate) = TODAY() - 1</formula>
    <label>Spending Period Ended Yesterday</label>
    <type>Checkbox</type>
</CustomField>