force-app/main/default/objects/FundingAward/fields/Total_Disbursed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Disbursed_Amount__c</fullName>
    <description>This field denotes the amount disbursed against the funding award</description>
    <label>Total Disbursed Amount</label>
    <summarizedField>FundingDisbursement.Amount</summarizedField>
    <summaryForeignKey>FundingDisbursement.FundingAwardId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>