force-app/main/default/objects/FundingAward/fields/Under_Embargo__c.field-meta.xml
<CustomField>
    <fullName>Under_Embargo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Under Embargo</label>
    <type>Checkbox</type>
</CustomField>