force-app/main/default/objects/FundingAward/validationRules/Prevent_Over_Awarding.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Over_Awarding</fullName>
    <active>true</active>
    <description>Prevents the Funding Award Amount from exceeding the Current Available Fund of the related Budget.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(BudgetId)),
    Amount &gt; Budget.Current_Available_Fund__c
)</errorConditionFormula>
    <errorMessage>The Funding Award amount cannot be greater than the current available funds in the budget.</errorMessage>
</ValidationRule>