force-app/main/default/objects/FundingAward/validationRules/Prevent_Status_Change_if_Rollup_is_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Status_Change_if_Rollup_is_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  OR(
    ISPICKVAL( Status , &quot;Completed&quot;),
    ISPICKVAL( Status , &quot;Active&quot;)
  ),
   Required_Documents_Pending__c &lt;&gt; 0
)</errorConditionFormula>
    <errorMessage>You must upload all required documents before you can change the status to &apos;Active&apos; or &apos;Completed&apos;.</errorMessage>
</ValidationRule>